Automatically run bpfmt.
Bug: N/A
Test: touched Android.bp
Change-Id: I51be9b2fb105b2cf2e55f3acedf9e88b8456f6c2

--- a/PREUPLOAD.cfg
+++ b/PREUPLOAD.cfg
@@ -1,4 +1,5 @@
 [Hook Scripts]
+bpfmt = tools/bpfmt.sh
 notice = tools/update_notice.sh
 seccomp = tools/update_seccomp.sh
 syscalls = tools/update_syscalls.sh
